# Serije-programi-instaler

./: CMakeLists.txt  README.md  resources.qrc  series_seed.db
.github/workflows/: build.yml
installer/: SeriesIndexer.iss
keygen/: keygen.py
resources/: style.qss
src/: SeriesIndexer.iss  database.cpp  database.h  imdbfetcher.cpp  imdbfetcher.h  importdialog.cpp  importdialog.h  licensedialog.cpp  licensedialog.h  licensemanager.cpp  licensemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_actions.cpp  seriesdialog.cpp  seriesdialog.h  seriesfiltermodel.cpp  seriesfiltermodel.h  settingsdialog.cpp  settingsdialog.h  xlsxbridge.cpp  xlsxbridge.h
